fixed vertical summary card content overflow

--- a/src/components/article-cards/SummaryCardVertical.module.css
+++ b/src/components/article-cards/SummaryCardVertical.module.css
@@ -11,6 +11,7 @@
 .article-image {
   display: inline-block;
   min-width: 100px;
+  max-width: 100px;
   height: 100px;
   background-position: center;
   background-size: cover;
@@ -23,12 +24,13 @@
 }
 
 .article-info-heading {
-  height: 80%;
+  height: 60px;
   overflow: hidden;
+  margin-bottom: 15px;
 }
 
 .article-badge {
-  height: 10%;
+  height: 10px;
   text-align: left;
   padding: 5px 0;
 }
@@ -38,7 +40,7 @@
   position: absolute;
   width: 100%;
   border-top: 1px solid #f0f0f0;
-  top: -1.3rem;
+  top: -0.9rem;
 }
 
 .article-num {
@@ -55,19 +57,16 @@
   }
 
   .article-details {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    gap: 8px;
   }
 
   .article-info-heading {
-    height: 48%;
+    max-height: 60px;
     overflow: hidden;
+    margin-bottom: 15px;
   }
 
   .article-badge {
-    height: 10%;
+    height: 10px;
     text-align: left;
     padding: 5px 0;
   }
